# NewGit

./: .gitignore  CMakeLists.txt  comp.sh  main  readme.md
.ccls-cache/@@home@jankat@github@NewGit/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@14@backward@binders.h.blob  @usr@include@c++@14@bit.blob  @usr@include@c++@14@bits@alloc_traits.h.blob  @usr@include@c++@14@bits@allocated_ptr.h.blob  @usr@include@c++@14@bits@allocator.h.blob  @usr@include@c++@14@bits@basic_ios.h.blob  @usr@include@c++@14@bits@basic_ios.tcc.blob  @usr@include@c++@14@bits@basic_string.h.blob  @usr@include@c++@14@bits@basic_string.tcc.blob  @usr@include@c++@14@bits@char_traits.h.blob  @usr@include@c++@14@bits@charconv.h.blob  @usr@include@c++@14@bits@chrono.h.blob  @usr@include@c++@14@bits@codecvt.h.blob  @usr@include@c++@14@bits@concept_check.h.blob  @usr@include@c++@14@bits@cpp_type_traits.h.blob  @usr@include@c++@14@bits@cxxabi_forced.h.blob  @usr@include@c++@14@bits@cxxabi_init_exception.h.blob  @usr@include@c++@14@bits@exception.h.blob  @usr@include@c++@14@bits@exception_defines.h.blob  @usr@include@c++@14@bits@exception_ptr.h.blob  @usr@include@c++@14@bits@fs_dir.h.blob  @usr@include@c++@14@bits@fs_fwd.h.blob  @usr@include@c++@14@bits@fs_ops.h.blob  @usr@include@c++@14@bits@fs_path.h.blob  @usr@include@c++@14@bits@fstream.tcc.blob  @usr@include@c++@14@bits@functexcept.h.blob  (+198 more)
src/: compile_commands.json  main  main.cpp  main.cpp.orig  main_BASE_582292.cpp  main_LOCAL_582292.cpp  main_REMOTE_582292.cpp
(+503 files in other folders)
